--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "antrax",
-    "version": "0.2.9.0",
+    "version": "0.2.9",
     "description": "simple practical ancient greek morph analizer for morpheus-greek",
     "main": "main.js",
     "scripts": {
@@ -17,7 +17,7 @@
         "electron.js"
     ],
     "author": "m.bykov@gmail.com",
-    "license": "GNU GPL",
+    "license": "GPL-3.0",
     "devDependencies": {
         "electron": "^1.6.6",
         "electron-rebuild": "^1.5.11"
