--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "orthos": "^0.2.1",
         "underscore": "^1.8.3",
-        "pouchdb-node": "^6.2.0"
+        "pouchdb": "^6.2.0",
+        "pouchdb-adapter-node-websql": "^6.2.0"
     }
 }
