--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "antrax",
-    "version": "0.1.13",
-    "description": "simple practical ancient greek morph analizer for morpheus-greek",
-    "main": "main.js",
-    "scripts": {
-        "start": "electron ."
-    },
-    "repository": "https://github.com/mbykov/antrax",
-    "keywords": [
-        "ancient",
-        "greek",
-        "morphology",
-        "syntax",
-        "node.js",
-        "electron.js"
-    ],
-    "author": "m.bykov@gmail.com",
-    "license": "GPL-3.0",
-    "devDependencies": {
-        "electron": "^1.6.6",
-        "electron-rebuild": "^1.5.11"
-    },
-    "dependencies": {
-        "orthos": "^0.2.1",
-        "underscore": "^1.8.3",
-        "pouchdb": "^6.2.0"
-    }
+  "name": "antrax",
+  "version": "0.1.14",
+  "description": "simple practical ancient greek morph analizer for morpheus-greek",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "repository": "https://github.com/mbykov/antrax",
+  "keywords": [
+    "ancient",
+    "greek",
+    "morphology",
+    "syntax",
+    "node.js",
+    "electron.js"
+  ],
+  "author": "m.bykov@gmail.com",
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "electron": "^1.6.6",
+    "electron-rebuild": "^1.5.11"
+  },
+  "dependencies": {
+    "orthos": "^0.2.1",
+    "pouchdb": "^6.2.0",
+    "pouchdb-dump-cli": "^2.0.6",
+    "underscore": "^1.8.3"
+  }
 }
