--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-components
-build
-.todo.org
-todo.org
 node_modules
-pouchdb/flex
-pouchdb/gr-flex
-pouchdb/greek
-pouchdb-for-dump
-log
+*.log
+*.pid
+*.seed
+.DS_Store
+coverage
+logs
+pids
+dist
 Junk
-TMP
-client
-.cfg
+_*.org
+Junk
+test/test-Junk
+test-more
