--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antrax",
   "description": "simple practical ancient greek morph analizer for morpheus-greek",
-  "version": "0.8.26",
+  "version": "0.8.273",
   "author": "Michael Bykov <m.bykov@gmail.com>",
   "copyright": "© 2018, Michael Bykov",
   "license": "GPL-3.0",
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "minimum:": "yarn add --dev shx cross-env mocha mocha-each babel-register babel-preset-es2015 chai nodemon babel-cli babel-plugin-add-module-exports orthos fs-extra pouchdb",
-    "start": "npm run build && node dist",
+    "start": "npm run build && node dist/run",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel -s true src -d dist",
     "clean": "rm -rf dist",
@@ -37,6 +37,8 @@
     "dist"
   ],
   "dependencies": {
+    "pouchdb": "^7.0.0",
+    "orthos": "^0.3.0",
     "fs-jetpack": "^1.3.0",
     "lodash": "^4.17.4"
   },
@@ -54,8 +56,6 @@
     "mocha": "^4.1.0",
     "mocha-each": "^1.1.0",
     "nodemon": "^1.14.11",
-    "orthos": "^0.3.0",
-    "pouchdb": "^7.0.0",
     "shx": "^0.2.2"
   },
   "repository": {
