--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antrax",
   "description": "simple practical ancient greek morph analizer for morpheus-greek",
-  "version": "0.8.274",
+  "version": "0.8.275",
   "author": "Michael Bykov <m.bykov@gmail.com>",
   "copyright": "© 2018, Michael Bykov",
   "license": "GPL-3.0",
@@ -18,6 +18,7 @@
   "scripts": {
     "minimum:": "yarn add --dev shx cross-env mocha mocha-each babel-register babel-preset-es2015 chai nodemon babel-cli babel-plugin-add-module-exports orthos fs-extra pouchdb",
     "start": "npm run build && node dist/run",
+    "term": "npm run build && node dist/term",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production babel -s true src -d dist",
     "clean": "rm -rf dist",
