--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "dist"
   ],
   "dependencies": {
-    "pouchdb": "^7.0.0",
-    "orthos": "^0.3.0",
+    "fs-extra": "^6.0.1",
     "fs-jetpack": "^1.3.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "orthos": "^0.3.0",
+    "pouchdb": "^7.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
