--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antrax",
   "description": "simple practical ancient greek morph analizer for morpheus-greek",
-  "version": "0.8.280",
+  "version": "0.8.282",
   "author": "Michael Bykov <m.bykov@gmail.com>",
   "copyright": "© 2018, Michael Bykov",
   "license": "GPL-3.0",
@@ -38,6 +38,7 @@
     "dist"
   ],
   "dependencies": {
+    "copy-dir": "^0.3.0",
     "fs-extra": "^6.0.1",
     "fs-jetpack": "^1.3.0",
     "lodash": "^4.17.4",
