--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "wktname": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_name.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "wktadj": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_ad.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "wktadv": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_adv.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktpart_": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_part.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktpart": "cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'test/wkt_part.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "test_": "cross-env NODE_ENV=test mocha -c -S -R spec 'test/**/*.test.js' --compilers js:babel-register --check-leaks",
     "lint": "eslint src test"
   },
