--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "antrax",
-  "description": "simple practical ancient greek morph analizer for morpheus-greek",
-  "version": "0.8.62",
+  "name": "loigos",
+  "description": "simple practical ancient greek analizer for Morpheus-Greek",
+  "version": "0.9.0",
   "Author": "Michael Bykov <m.bykov@gmail.com>",
   "copyright": "© 2018, Michael Bykov",
   "license": "GPL-3.0",
@@ -16,21 +16,24 @@
     "electron.js"
   ],
   "scripts": {
-    "minimum:": "yarn add --dev shx cross-env mocha mocha-each babel-register babel-preset-es2015 chai nodemon babel-cli babel-plugin-add-module-exports orthos fs-extra pouchdb",
-    "start": "npm run build && node dist/run",
+    "go": "node dist/run",
+    "start": "yarn run build && node dist/run",
+    "start_": "npm run build && node dist/run",
     "term": "npm run build && node dist/term",
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production babel -s true src -d dist",
+    "build": "babel -s true src -d dist",
+    "buildtest": "babel -s true test -d dist/test",
+    "build_": "cross-env NODE_ENV=production babel -s true src -d dist",
     "clean": "rm -rf dist",
     "test": "cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'test/**/*.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktverb": "cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'test/wkt_verb.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "comp": "cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b 'test/**/verb_compound.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktverb": "yarn run buildtest && cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'dist/test/wkt_verb.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "comp_verb": "yarn run buildtest && cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b 'dist/test/**/comp_wkt_verb.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "name_": "cross-env NODE_ENV=test mocha -c -R dot -b 'test/name_ucb.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "adj_": "cross-env NODE_ENV=test mocha -c -R dot -b 'test/name_ad_fgb.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktname": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_name.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktadj": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_ad.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktadv": "cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'test/wkt_adv.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
-    "wktpart": "cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'test/wkt_part.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktname": "yarn run buildtest && cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'dist/test/wkt_name.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktadj": "yarn run buildtest && cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'dist/test/wkt_ad.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktadv": "yarn run buildtest && cross-env NODE_ENV=test mocha -c -R dot -b --timeout 5000 'dist/test/wkt_adv.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
+    "wktpart": "yarn run buildtest && cross-env NODE_ENV=test mocha -g $FILTER -c -R dot -b --timeout 5000 'dist/test/wkt_part.test.js' --compilers js:babel-register --check-leaks --no-deprecation",
     "test_": "cross-env NODE_ENV=test mocha -c -S -R spec 'test/**/*.test.js' --compilers js:babel-register --check-leaks",
     "lint": "eslint src test"
   },
@@ -38,27 +41,22 @@
     "dist"
   ],
   "dependencies": {
+    "babel-register": "^6.26.0",
     "copy-dir": "^0.3.0",
-    "fs-extra": "^7.0.0",
-    "lodash": "^4.17.4",
-    "orthos": "^0.5.1",
-    "pouchdb": "^7.0.0"
+    "fs-extra": "^7.0.1",
+    "lodash": "^4.17.11",
+    "orthos": "^0.6.3",
+    "pouchdb": "^7.0.0",
+    "speckled-band": "^4.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-minify": "^0.2.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "cross-env": "^5.1.3",
-    "eslint": "^4.15.0",
-    "mocha": "^4.1.0",
-    "mocha-each": "^1.1.0",
-    "nodemon": "^1.14.11",
-    "shx": "^0.2.2"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "cross-env": "^5.2.0",
+    "debug": "^4.1.1",
+    "mocha": "^5.2.0",
+    "mocha-each": "^1.1.0"
   },
   "repository": {
     "type": "git",
