--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.9.102",
+  "version": "0.9.104",
   "name": "antrax",
-  "description": "simple practical ancient greek analizer for Morpheus-Greek",
+  "description": "simple practical ancient greek analizer for Biblos.js",
   "Author": "Michael Bykov <m.bykov@gmail.com>",
   "copyright": "© 2017-2019, Michael Bykov",
   "license": "GPL-3.0",
