--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.131",
+  "version": "0.9.135",
   "name": "antrax",
   "description": "simple practical ancient greek analizer for Biblos.js",
   "Author": "Michael Bykov <m.bykov@gmail.com>",
@@ -47,6 +47,8 @@
     "lodash": "^4.17.11",
     "orthos": "^0.6.3",
     "pouchdb": "^7.0.0",
+    "pouchdb-load": "^1.4.6",
+    "request": "^2.88.0",
     "speckled-band": "^4.0.1"
   },
   "devDependencies": {
