--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.135",
+  "version": "0.9.136",
   "name": "antrax",
   "description": "simple practical ancient greek analizer for Biblos.js",
   "Author": "Michael Bykov <m.bykov@gmail.com>",
@@ -49,6 +49,7 @@
     "pouchdb": "^7.0.0",
     "pouchdb-load": "^1.4.6",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "speckled-band": "^4.0.1"
   },
   "devDependencies": {
