--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "copy-dir": "^0.3.0",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.11",
+    "memorystream": "^0.3.1",
     "orthos": "^0.6.3",
     "pouchdb": "^7.0.0",
     "pouchdb-load": "^1.4.6",
+    "pouchdb-replication-stream": "^1.2.9",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "speckled-band": "^4.0.1"
